fix try-out styles on mobile view

--- a/src/app/views/try-out/try-out.component.scss
+++ b/src/app/views/try-out/try-out.component.scss
@@ -1,10 +1,16 @@
+:host {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+}
+
 mat-card {
     display: flex;
     justify-content: center;
-    margin-top: 35px;
     border-radius: 0;
     font-size: 26px;
     z-index: 2;
+    line-height: 30px;
 }
 
 item-list {
